# Semantic-Markdown-Parser

./: .gitignore  LICENSE.txt  README.md  input.md  main.py  markdown_parser.py  output.txt  pyproject.toml  text_splitter.py
token_encoder/: encode.py
