[tool.poetry]
name = "semantic-markdown-parser"
version = "1.0.0"
description = "A Python project that parses Markdown files into a tree structure, then processes them into semantically meaningful text chunks."
authors = ["Talha J Siam <talha@askturing.ai>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12.6"
llama-index = "^0.12.10"
tokenizers = "^0.21.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
